plugins {
    id "java"
}

group "meteordevelopment"
version "0.1.0"

java {
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
}
